<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/tailleMarges"
    tools:context="simon.android.m2l.ChangerMdp">

    <TextView
        android:id="@+id/changer_mdp_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changer_mdp_titre1" />

    <EditText
        android:id="@+id/changer_mdp_editTextMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/changer_mdp_saisie_entrer" />

    <EditText
        android:id="@+id/changer_mdp_editTextConfirmationMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/changer_mdp_saisie_confirmer" />

    <Button
        android:id="@+id/changer_mdp_buttonChanger"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_mdp_bouton_changer" />

    <Button
        android:id="@+id/changer_mdp_buttonRetourner"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changer_mdp_bouton_retourner" />

    <TextView
        android:id="@+id/changer_mdp_textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
